# tabarato

./: .env.example  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  reviewed_products.json  temp.py  test.py
backend/: Tabarato.sln
backend/Tabarato.Api/: Dockerfile  Program.cs  Tabarato.Api.csproj
backend/Tabarato.Application/: Tabarato.Application.csproj
backend/Tabarato.Domain/: Tabarato.Domain.csproj
backend/Tabarato.Infra/: Tabarato.Infra.csproj
data/: abbr.json
data/bronze/: angeloni.parquet  angeloni_data.parquet  bistek.parquet  bistek_data.parquet  giassi.parquet
data/clustered/: es-products.parquet  products.parquet  temp_products.parquet
data/embedded/: reviewed_products_embeddings.parquet
data/gold/: categories.parquet  heads.parquet  products.parquet  reviewed_products.json  unreviewed_products.json
data/model/: products_ngrams.parquet
data/silver/: angeloni.parquet  angeloni_data.parquet  bistek.parquet  bistek_data.parquet  giassi.parquet
elasticsearch/: Dockerfile  init-elasticsearch.sh  main.py  products-index.json
experiments/: embeddings.ipynb  experiments.ipynb
frontend/: app.json  package-lock.json  package.json
pgvector/: Dockerfile  docker-compose.yaml  init-postgres.sql
scraping-bistek/: data.json  main.py  requirements.txt
scripts/: import_streets.py  init-postgres.sql  results_sample_query.sql
tabarato/: clustering.py  elasticsearch_loader.py  loader.py  main.py  model.py  postgres_loader.py  postgres_upserter.py
transform/: clustered_products.json  main.py
(+109 files in other folders)
