[tool.poetry]
name = "tabarato"
version = "0.1.0"
description = ""
authors = ["guilherme-savio <guilhermesavio02@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hrequests = "^0.9.2"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
