[tool.poetry]
name = "tabarato"
version = "0.1.0"
description = ""
authors = ["guilherme-savio <guilhermesavio02@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hrequests = "^0.9.2"
dotenv = "^0.9.9"
pandas = "^2.2.3"
pymongo = "^4.11.2"
beautifulsoup4 = "^4.13.3"
aiohttp = "^3.11.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
